--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@angular/http": "4.0.0",
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
+    "@ionic-native/app-availability": "^3.5.0",
     "@ionic-native/core": "3.4.2",
-    "@ionic-native/splash-screen": "3.4.2",
-    "@ionic-native/status-bar": "3.4.2",
+    "@ionic-native/device": "^3.5.0",
+    "@ionic-native/geolocation": "^3.5.0",
+    "@ionic-native/in-app-browser": "^3.5.0",
+    "@ionic-native/splash-screen": "^3.4.2",
+    "@ionic-native/status-bar": "^3.4.2",
     "@ionic/storage": "2.0.1",
     "ionic-angular": "3.0.1",
     "ionicons": "3.0.0",
