--- a/package.json
+++ b/package.json
@@ -1,58 +1,76 @@
 {
-  "name": "ionic-hello-world",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "ionic:build": "ionic-app-scripts build --dev",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/compiler-cli": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@ionic-native/app-availability": "^3.5.0",
-    "@ionic-native/core": "3.4.2",
-    "@ionic-native/device": "^3.5.0",
-    "@ionic-native/geolocation": "^3.5.0",
-    "@ionic-native/in-app-browser": "^3.5.0",
-    "@ionic-native/splash-screen": "^3.4.2",
-    "@ionic-native/status-bar": "^3.4.2",
-    "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.0.1",
-    "ionicons": "3.0.0",
-    "rxjs": "5.1.1",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "^0.8.4"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "^1.3.2",
-    "typescript": "~2.2.1"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-whitelist",
-    "cordova-plugin-console",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-geolocation",
-    "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": [
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
+    "name": "ionic-hello-world",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "ionic:build": "ionic-app-scripts build --dev",
+        "ionic:serve": "ionic-app-scripts serve"
+    },
+    "dependencies": {
+        "@angular/common": "4.1.2",
+        "@angular/compiler": "4.1.2",
+        "@angular/compiler-cli": "4.1.2",
+        "@angular/core": "4.1.2",
+        "@angular/forms": "4.1.2",
+        "@angular/http": "4.1.2",
+        "@angular/platform-browser": "4.1.2",
+        "@angular/platform-browser-dynamic": "4.1.2",
+        "@angular/tsc-wrapped": "^4.1.3",
+        "@ionic-native/app-availability": "^3.11.0",
+        "@ionic-native/core": "3.6.1",
+        "@ionic-native/device": "^3.11.0",
+        "@ionic-native/geolocation": "^3.11.0",
+        "@ionic-native/in-app-browser": "^3.11.0",
+        "@ionic-native/splash-screen": "3.6.1",
+        "@ionic-native/status-bar": "3.6.1",
+        "@ionic/cli-plugin-cordova": "^1.3.0",
+        "@ionic/cli-plugin-ionic-angular": "^1.3.0",
+        "@ionic/storage": "2.0.1",
+        "ionic-angular": "3.3.0",
+        "ionicons": "3.0.0",
+        "rollup": "^0.41.6",
+        "rxjs": "5.1.1",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.10",
+        "cordova-plugin-appavailability": "~0.4.2",
+        "cordova-plugin-geolocation": "~2.4.2",
+        "cordova-plugin-inappbrowser": "~1.7.0",
+        "cordova-sqlite-storage": "~2.0.2"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "^1.3.7",
+        "typescript": "2.3.3"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-whitelist",
+        "cordova-plugin-console",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen",
+        "cordova-plugin-geolocation",
+        "ionic-plugin-keyboard"
+    ],
+    "cordovaPlatforms": [
+        "ios",
+        {
+            "platform": "ios",
+            "version": "",
+            "locator": "ios"
+        }
+    ],
+    "config": {
+        "ionic_source_map": "source-map"
+    },
+    "description": "Tippy: An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-appavailability": {},
+            "cordova-plugin-geolocation": {
+                "GEOLOCATION_USAGE_DESCRIPTION": " "
+            },
+            "cordova-plugin-inappbrowser": {},
+            "cordova-sqlite-storage": {}
+        }
     }
-  ],
-  "config": {
-    "ionic_source_map": "source-map"
-  },
-  "description": "Tippy: An Ionic project"
 }
