--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
         "@ionic/cli-plugin-cordova": "^1.3.0",
         "@ionic/cli-plugin-ionic-angular": "^1.3.0",
         "@ionic/storage": "2.0.1",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-appavailability": "~0.4.2",
+        "cordova-plugin-geolocation": "~2.4.2",
+        "cordova-plugin-inappbrowser": "~1.7.0",
+        "cordova-sqlite-storage": "~2.0.2",
         "ionic-angular": "3.3.0",
         "ionicons": "3.0.0",
         "rollup": "^0.41.6",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.10",
-        "cordova-plugin-appavailability": "~0.4.2",
-        "cordova-plugin-geolocation": "~2.4.2",
-        "cordova-plugin-inappbrowser": "~1.7.0",
-        "cordova-sqlite-storage": "~2.0.2"
+        "zone.js": "0.8.10"
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.7",
@@ -71,6 +72,9 @@
             },
             "cordova-plugin-inappbrowser": {},
             "cordova-sqlite-storage": {}
-        }
+        },
+        "platforms": [
+            "android"
+        ]
     }
 }
