--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
         "@ionic-native/in-app-browser": "^3.11.0",
         "@ionic-native/splash-screen": "3.6.1",
         "@ionic-native/status-bar": "3.6.1",
-        "@ionic/cli-plugin-cordova": "^1.3.0",
-        "@ionic/cli-plugin-ionic-angular": "^1.3.0",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-appavailability": "~0.4.2",
@@ -41,6 +39,8 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.7",
+        "@ionic/cli-plugin-cordova": "1.4.0",
+        "@ionic/cli-plugin-ionic-angular": "1.3.1",
         "typescript": "2.3.3"
     },
     "cordovaPlugins": [
