--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ionic-native/status-bar": "3.6.1",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
         "cordova-plugin-appavailability": "~0.4.2",
         "cordova-plugin-geolocation": "~2.4.2",
         "cordova-plugin-inappbrowser": "~1.7.0",
@@ -35,7 +36,13 @@
         "rollup": "^0.41.6",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.10"
+        "zone.js": "0.8.10",
+        "cordova-plugin-console": "~1.0.6",
+        "cordova-plugin-device": "~1.1.5",
+        "cordova-plugin-splashscreen": "~4.0.2",
+        "cordova-plugin-statusbar": "~2.2.2",
+        "cordova-plugin-whitelist": "~1.3.2",
+        "ionic-plugin-keyboard": "~2.2.1"
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.7",
@@ -71,10 +78,17 @@
                 "GEOLOCATION_USAGE_DESCRIPTION": " "
             },
             "cordova-plugin-inappbrowser": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
