--- a/package.json
+++ b/package.json
@@ -25,24 +25,26 @@
         "@ionic-native/splash-screen": "3.6.1",
         "@ionic-native/status-bar": "3.6.1",
         "@ionic/storage": "2.0.1",
+        "amdefine": "^1.0.1",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
-        "cordova-plugin-appavailability": "~0.4.2",
-        "cordova-plugin-geolocation": "~2.4.2",
-        "cordova-plugin-inappbrowser": "~1.7.0",
-        "cordova-sqlite-storage": "~2.0.2",
+        "cordova-plugin-appavailability": "^0.4.2",
+        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-inappbrowser": "^1.7.1",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.3",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "cordova-sqlite-storage": "^2.0.4",
         "ionic-angular": "3.3.0",
+        "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "rollup": "^0.41.6",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.10",
-        "cordova-plugin-console": "~1.0.6",
-        "cordova-plugin-device": "~1.1.5",
-        "cordova-plugin-splashscreen": "~4.0.2",
-        "cordova-plugin-statusbar": "~2.2.2",
-        "cordova-plugin-whitelist": "~1.3.2",
-        "ionic-plugin-keyboard": "~2.2.1"
+        "zone.js": "0.8.10"
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.7",
