--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "@angular/platform-browser": "4.1.2",
         "@angular/platform-browser-dynamic": "4.1.2",
         "@angular/tsc-wrapped": "^4.1.3",
-        "@ionic-native/app-availability": "^3.11.0",
+        "@ionic-native/app-availability": "^3.12.1",
         "@ionic-native/core": "3.6.1",
         "@ionic-native/device": "^3.11.0",
         "@ionic-native/geolocation": "^3.11.0",
@@ -38,6 +38,7 @@
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
         "cordova-sqlite-storage": "^2.0.4",
+        "ionic": "^3.4.0",
         "ionic-angular": "3.3.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -75,7 +76,6 @@
     "description": "Ever wanted to tip your favorite local band when you don't have any cash? Try Local Groove! Payments are powered by Venmo. More great local music-focused features to come. Don't forget to tip your band!",
     "cordova": {
         "plugins": {
-            "cordova-plugin-appavailability": {},
             "cordova-plugin-geolocation": {
                 "GEOLOCATION_USAGE_DESCRIPTION": " "
             },
@@ -86,7 +86,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-appavailability": {}
         },
         "platforms": [
             "android",
