--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@ionic-native/app-availability": "^3.13.1",
         "@ionic-native/core": "3.6.1",
         "@ionic-native/device": "^3.11.0",
+        "@ionic-native/firebase-analytics": "^4.1.0",
         "@ionic-native/geolocation": "^3.11.0",
         "@ionic-native/in-app-browser": "^3.11.0",
         "@ionic-native/splash-screen": "3.6.1",
@@ -29,9 +30,11 @@
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-appavailability": "^0.4.2",
+        "cordova-plugin-cocoapod-support": "^1.3.0",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-firebase-analytics": "^0.10.1",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-splashscreen": "^4.0.3",
@@ -87,7 +90,8 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-appavailability": {}
+            "cordova-plugin-appavailability": {},
+            "cordova-plugin-firebase-analytics": {}
         },
         "platforms": [
             "android",
