--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "@ionic-native/core": "3.6.1",
         "@ionic-native/device": "^3.14.0",
         "@ionic-native/firebase-analytics": "^4.1.0",
-        "@ionic-native/geolocation": "^3.14.0",
+        "@ionic-native/geolocation": "^4.2.1",
         "@ionic-native/in-app-browser": "^3.14.0",
         "@ionic-native/splash-screen": "3.6.1",
         "@ionic-native/status-bar": "3.6.1",
@@ -41,10 +41,12 @@
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
         "cordova-sqlite-storage": "^2.0.4",
-        "ionic": "^3.6.0",
         "ionic-angular": "3.3.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "localforage": "^1.5.0",
+        "localforage-cordovasqlitedriver": "^1.6.0",
+        "ngx-pipes": "^1.6.5",
         "rollup": "^0.41.6",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
@@ -54,6 +56,7 @@
         "@ionic/app-scripts": "^1.3.12",
         "@ionic/cli-plugin-cordova": "1.5.0",
         "@ionic/cli-plugin-ionic-angular": "1.4.0",
+        "ionic": "3.10.3",
         "typescript": "2.3.3"
     },
     "cordovaPlugins": [
