--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
         "@angular/platform-browser-dynamic": "4.1.2",
         "@angular/tsc-wrapped": "^4.3.2",
         "@ionic-native/app-availability": "^3.14.0",
-        "@ionic-native/core": "3.6.1",
+        "@ionic-native/core": "^4.3.0",
         "@ionic-native/device": "^3.14.0",
+        "@ionic-native/facebook": "^4.3.0",
         "@ionic-native/firebase-analytics": "^4.1.0",
         "@ionic-native/geolocation": "^4.2.1",
         "@ionic-native/in-app-browser": "^3.14.0",
@@ -34,6 +35,7 @@
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-facebook4": "^1.9.1",
         "cordova-plugin-firebase-analytics": "^0.10.1",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-inappbrowser": "^1.7.1",
@@ -41,6 +43,7 @@
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
         "cordova-sqlite-storage": "^2.0.4",
+        "es6-promise-plugin": "^4.1.0",
         "ionic-angular": "3.3.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -54,8 +57,6 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.12",
-        "@ionic/cli-plugin-cordova": "1.5.0",
-        "@ionic/cli-plugin-ionic-angular": "1.4.0",
         "ionic": "3.10.3",
         "typescript": "2.3.3"
     },
@@ -94,7 +95,11 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-appavailability": {},
-            "cordova-plugin-firebase-analytics": {}
+            "cordova-plugin-firebase-analytics": {},
+            "cordova-plugin-facebook4": {
+                "APP_ID": "1216894665081972",
+                "APP_NAME": "Local Groove"
+            }
         },
         "platforms": [
             "android",
