--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "4.1.2",
-        "@angular/compiler": "4.1.2",
-        "@angular/compiler-cli": "4.1.2",
-        "@angular/core": "4.1.2",
-        "@angular/forms": "4.1.2",
-        "@angular/http": "4.1.2",
-        "@angular/platform-browser": "4.1.2",
-        "@angular/platform-browser-dynamic": "4.1.2",
+        "@angular/common": "^4.4.3",
+        "@angular/compiler": "^4.4.3",
+        "@angular/compiler-cli": "^4.4.3",
+        "@angular/core": "^4.4.3",
+        "@angular/forms": "^4.4.3",
+        "@angular/http": "^4.4.3",
+        "@angular/platform-browser": "^4.4.3",
+        "@angular/platform-browser-dynamic": "^4.4.3",
         "@angular/tsc-wrapped": "^4.3.2",
-        "@ionic-native/app-availability": "^3.14.0",
-        "@ionic-native/core": "^4.3.0",
-        "@ionic-native/device": "^3.14.0",
-        "@ionic-native/facebook": "^4.3.0",
+        "@ionic-native/app-availability": "^4.3.2",
+        "@ionic-native/core": "^4.3.2",
+        "@ionic-native/device": "^4.3.2",
         "@ionic-native/firebase-analytics": "^4.1.0",
         "@ionic-native/geolocation": "^4.2.1",
-        "@ionic-native/in-app-browser": "^3.14.0",
-        "@ionic-native/splash-screen": "3.6.1",
-        "@ionic-native/status-bar": "3.6.1",
+        "@ionic-native/in-app-browser": "^4.3.2",
+        "@ionic-native/social-sharing": "^4.3.2",
+        "@ionic-native/splash-screen": "^4.3.2",
+        "@ionic-native/status-bar": "^4.3.2",
         "@ionic/storage": "2.0.1",
         "amdefine": "^1.0.1",
         "cordova-android": "^6.2.3",
@@ -35,29 +35,32 @@
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
-        "cordova-plugin-facebook4": "^1.9.1",
         "cordova-plugin-firebase-analytics": "^0.10.1",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
+        "cordova-plugin-x-socialsharing": "^5.2.1",
         "cordova-sqlite-storage": "^2.0.4",
         "es6-promise-plugin": "^4.1.0",
-        "ionic-angular": "3.3.0",
+        "inquirer": "^3.3.0",
+        "ionic-angular": "^3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "localforage": "^1.5.0",
         "localforage-cordovasqlitedriver": "^1.6.0",
         "ngx-pipes": "^1.6.5",
+        "qs": "^6.5.1",
         "rollup": "^0.41.6",
-        "rxjs": "5.1.1",
+        "rxjs": "^5.4.3",
+        "save": "^2.3.1",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.10"
+        "zone.js": "^0.8.18"
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.12",
-        "ionic": "3.10.3",
+        "ionic": "^3.13.2",
         "typescript": "2.3.3"
     },
     "cordovaPlugins": [
@@ -96,10 +99,7 @@
             "ionic-plugin-keyboard": {},
             "cordova-plugin-appavailability": {},
             "cordova-plugin-firebase-analytics": {},
-            "cordova-plugin-facebook4": {
-                "APP_ID": "1216894665081972",
-                "APP_NAME": "Local Groove"
-            }
+            "cordova-plugin-x-socialsharing": {}
         },
         "platforms": [
             "android",
