--- a/package.json
+++ b/package.json
@@ -8,31 +8,32 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "^4.4.6",
-        "@angular/compiler": "^4.4.6",
-        "@angular/compiler-cli": "^4.4.6",
-        "@angular/core": "^4.4.6",
-        "@angular/forms": "^4.4.6",
-        "@angular/http": "^4.4.6",
-        "@angular/platform-browser": "^4.4.6",
-        "@angular/platform-browser-dynamic": "^4.4.6",
-        "@angular/tsc-wrapped": "^4.4.6",
-        "@ionic-native/app-availability": "^4.5.2",
-        "@ionic-native/core": "^4.5.2",
-        "@ionic-native/device": "^4.5.2",
-        "@ionic-native/firebase": "^4.5.2",
-        "@ionic-native/geolocation": "^4.5.2",
-        "@ionic-native/in-app-browser": "^4.5.2",
-        "@ionic-native/social-sharing": "^4.5.2",
-        "@ionic-native/splash-screen": "^4.5.2",
-        "@ionic-native/status-bar": "^4.5.2",
+        "@angular/common": "^4.4.7",
+        "@angular/compiler": "^4.4.7",
+        "@angular/compiler-cli": "^4.4.7",
+        "@angular/core": "^4.4.7",
+        "@angular/forms": "^4.4.7",
+        "@angular/http": "^4.4.7",
+        "@angular/platform-browser": "^4.4.7",
+        "@angular/platform-browser-dynamic": "^4.4.7",
+        "@angular/tsc-wrapped": "^4.4.7",
+        "@ionic-native/app-availability": "^4.9.1",
+        "@ionic-native/core": "^4.9.1",
+        "@ionic-native/device": "^4.9.1",
+        "@ionic-native/firebase": "^4.9.1",
+        "@ionic-native/geolocation": "^4.9.1",
+        "@ionic-native/in-app-browser": "^4.9.1",
+        "@ionic-native/social-sharing": "^4.9.1",
+        "@ionic-native/splash-screen": "^4.9.1",
+        "@ionic-native/status-bar": "^4.9.1",
         "@ionic/storage": "2.0.1",
         "amdefine": "^1.0.1",
-        "cordova-android": "^6.2.3",
+        "chrome": "^0.1.0",
+        "cordova-android": "^6.4.0",
         "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.5.4",
         "cordova-plugin-appavailability": "^0.4.2",
-        "cordova-plugin-cocoapod-support": "^1.3.0",
+        "cordova-plugin-cocoapod-support": "^1.5.0",
         "cordova-plugin-compat": "^1.2.0",
         "cordova-plugin-console": "^1.1.0",
         "cordova-plugin-device": "^1.1.7",
@@ -40,29 +41,29 @@
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-inappbrowser": "^1.7.2",
         "cordova-plugin-splashscreen": "^4.1.0",
-        "cordova-plugin-statusbar": "^2.4.1",
+        "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
-        "cordova-plugin-x-socialsharing": "^5.2.1",
-        "cordova-sqlite-storage": "^2.2.0",
+        "cordova-plugin-x-socialsharing": "^5.4.1",
+        "cordova-sqlite-storage": "^2.3.3",
         "es6-promise-plugin": "^4.2.2",
         "inquirer": "^3.3.0",
         "ionic-angular": "^3.9.2",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
-        "localforage": "^1.5.6",
-        "localforage-cordovasqlitedriver": "^1.6.0",
+        "localforage": "^1.7.2",
+        "localforage-cordovasqlitedriver": "^1.7.0",
         "ngx-pipes": "^1.7.0",
-        "qs": "^6.5.1",
+        "qs": "^6.5.2",
         "rollup": "^0.41.6",
-        "rxjs": "^5.5.6",
+        "rxjs": "^5.5.11",
         "save": "^2.3.2",
         "sw-toolbox": "3.6.0",
         "tsickle": "^0.26.0",
-        "zone.js": "^0.8.20"
+        "zone.js": "^0.8.26"
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.12",
-        "ionic": "^3.19.1",
+        "ionic": "^3.20.0",
         "typescript": "2.3.3"
     },
     "cordovaPlugins": [
