--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "ionicons": "3.0.0",
         "localforage": "^1.7.2",
         "localforage-cordovasqlitedriver": "^1.7.0",
-        "ngx-pipes": "^1.7.0",
+        "ngx-pipes": "^2.0.1",
         "qs": "^6.5.2",
         "rollup": "^0.41.6",
         "rxjs": "^5.5.11",
@@ -64,7 +64,7 @@
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.12",
         "ionic": "^3.20.0",
-        "typescript": "2.3.3"
+        "typescript": "^2.9.2"
     },
     "cordovaPlugins": [
         "cordova-plugin-whitelist",
